--- a/apps/slime-client/public/manifest.json
+++ b/apps/slime-client/public/manifest.json
@@ -3,6 +3,7 @@
     "manifest_version": 3,
     "name": "Hello Extensions",
     "description": "Base Level Extension",
+    "default_locale": "en",
     "version": "1.0",
     "action": {
         "default_popup": "index.html",
