--- a/apps/slime-client/manifest.json
+++ b/apps/slime-client/manifest.json
@@ -1,37 +1,56 @@
 {
-    "$schema": "https://json.schemastore.org/chrome-manifest",
-    "manifest_version": 3,
-    "name": "Slime - Open Source Coupon Discovery",
-    "description": "Slime is a open source alternative for coupon discovery, without modify affiliate codes and focus on community feedback!",
-    "default_locale": "en",
-    "version": "0.1",
-    "host_permissions": [ "http://*/*", "https://*/*" ],
-    "content_scripts": [ 
-      {
-        "all_frames": false,
-        "match_about_blank": false,
-        "js": [ "widget.js" ],
-        "matches": [ "http://*/*", "https://*/*" ],
-        "run_at": "document_end"
-      } 
-    ],
-    "action": {
-        "default_popup": "index.html",
-        "default_icon": {
-          "16": "icon.png",
-          "24": "icon.png",
-          "32": "icon.png"
-        }
-    },
-    "icons": {
-      "256": "icon.png"
-    },
-    "background": {
-      "service_worker": "service.js",
-      "type": "module"
-    },
-    "permissions": [
-      "tabs",
-      "storage"
-    ]
+  "$schema": "https://json.schemastore.org/chrome-manifest",
+  "manifest_version": 3,
+  "name": "Slime - Open Source Coupon Discovery",
+  "description": "Slime is a open source alternative for coupon discovery, without modify affiliate codes and focus on community feedback!",
+  "default_locale": "en",
+  "version": "0.1",
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
+  ],
+  "content_scripts": [
+    {
+      "all_frames": false,
+      "match_about_blank": false,
+      "js": [
+        "widget/widget.js"
+      ],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "run_at": "document_end"
+    }
+  ],
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "icon.png",
+      "24": "icon.png",
+      "32": "icon.png"
+    }
+  },
+  "icons": {
+    "256": "icon.png"
+  },
+  "background": {
+    "service_worker": "service.js",
+    "type": "module"
+  },
+  "permissions": [
+    "tabs",
+    "storage"
+  ],
+  "web_accessible_resources": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "resources": [
+        "widget/*", "*"
+      ]
+    }
+  ]
 }
