--- a/apps/slime-client/manifest.json
+++ b/apps/slime-client/manifest.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://json.schemastore.org/chrome-manifest",
   "manifest_version": 3,
-  "name": "Slime - Open Source Coupon Discovery",
-  "description": "Slime is a open source alternative for coupon discovery, without modify affiliate codes and focus on community feedback!",
+  "name": "__MSG_extName__",
+  "description": "__MSG_extDescription__",
   "default_locale": "en",
   "version": "0.1",
   "host_permissions": [
