Changing from pure vite plugin and adopt using WXT framework.
Note: Because WXT launches a chrome instances on `dev` command, we need to passThroughEnv on turbo.json in order to let it detect where the chrome installation is.
Or run with --env-mode=loose

See: https://turbo.build/repo/docs/crafting-your-repository/using-environment-variables#environment-modes

--- a/apps/slime-client/tsconfig.json
+++ b/apps/slime-client/tsconfig.json
@@ -1,13 +1,16 @@
 {
-  "files": [],
-  "references": [
-    { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
-  ],
+  "extends": "./.wxt/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
+    "allowImportingTsExtensions": true,
+    "jsx": "react-jsx",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "react": ["./node_modules/@types/react"],
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    /* Linting */
+    "strict": true,
+    "noFallthroughCasesInSwitch": true
   }
 }
