--- a/apps/slime-client/package.json
+++ b/apps/slime-client/package.json
@@ -1,15 +1,17 @@
 {
   "name": "slime-client",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1-alpha1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build --mode development && vite build --mode development --config vite.widget-config.ts",
-    "build:widget": "tsc -b && vite build --mode development --config vite.widget-config.ts",
-    "build:deployment": "tsc -b && vite build && vite build --config vite.widget-config.ts",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "wxt",
+    "dev:firefox": "wxt -b firefox",
+    "build": "wxt build",
+    "build:firefox": "wxt build -b firefox",
+    "zip": "wxt zip",
+    "zip:firefox": "wxt zip -b firefox",
+    "compile": "tsc --noEmit",
+    "postinstall": "wxt prepare"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -23,31 +25,25 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fs-extra": "^11.2.0",
     "lucide-react": "^0.469.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
-    "vite-plugin-singlefile": "^2.1.0",
-    "vite-plugin-static-copy": "^2.2.0"
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/chrome": "^0.0.289",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/chrome": "^0.0.280",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "@wxt-dev/module-react": "^1.1.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3",
+    "wxt": "^0.19.13"
   }
 }
