--- a/.vscode/i18n-ally-custom-framework.yml
+++ b/.vscode/i18n-ally-custom-framework.yml
@@ -2,7 +2,7 @@
 # You can check available language ids here: https://code.visualstudio.com/docs/languages/identifiers
 languageIds:
   - typescript
-
+  - typescriptreact
 # Look for t("...")
 usageMatchRegex:
   - "[^\\w\\d]t\\(['\"`]({key})['\"`]"
