--- a/apps/report-coupon/package.json
+++ b/apps/report-coupon/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.2",
     "@cloudflare/workers-types": "^4.20241230.0",
+    "miniflare": "^3.20241230.1",
     "typescript": "^5.5.2",
     "vitest": "2.1.8",
     "wrangler": "^3.99.0"
   },
   "dependencies": {
+    "@tsndr/cloudflare-worker-jwt": "^3.1.3",
     "itty-router": "^5.0.18",
+    "uuid": "^11.0.5",
     "workers-qb": "^1.8.0",
     "zod": "^3.24.1"
   }
