--- a/apps/report-coupon/package.json
+++ b/apps/report-coupon/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
+    "dev": "wrangler dev --port 8811",
     "start": "wrangler dev",
     "test": "vitest",
     "cf-typegen": "wrangler types"
@@ -12,11 +12,15 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.5.2",
     "@cloudflare/workers-types": "^4.20241230.0",
+    "miniflare": "^3.20241230.1",
     "typescript": "^5.5.2",
     "vitest": "2.1.8",
     "wrangler": "^3.99.0"
   },
   "dependencies": {
+    "@slime/api-v1": "*",
+    "@slime/util": "*",
+    "@tsndr/cloudflare-worker-jwt": "^3.1.3",
     "itty-router": "^5.0.18",
     "workers-qb": "^1.8.0",
     "zod": "^3.24.1"
