--- a/apps/slime-client/package.json
+++ b/apps/slime-client/package.json
@@ -21,9 +21,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@wxt-dev/i18n": "^0.2.3",
     "class-variance-authority": "^0.7.1",
@@ -33,6 +35,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
+    "react-router": "^7.1.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "vaul": "^1.1.2"
@@ -48,6 +51,7 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
-    "wxt": "^0.19.13"
+    "wxt": "^0.19.13",
+    "@slime/api-v1": "*"
   }
 }
